# LangSub

./: README.md  pyproject.toml  requirements.txt
LS_core/: __init__.py  state_manager.py  translator.py
LS_types/: __init__.py  callback_types.py  state_types.py  translation_types.py
constants/: __init__.py  paths.py
docs/docs/: README_EN.md  README_zh_CN.md
prompts/: __init__.py  translation_prompts.py
services/: __init__.py  llm.py  retry.py  subtitle.py
strategies/: __init__.py  base.py  detailed.py  keyword.py  quick.py
ui/: __init__.py  main_ui.py
ui/GUI_qtdesigner/: Ui_llm_setting.py  Ui_translation.py  llm_setting.ui  translation.ui
ui/i18n/: LangSub_en_US.qm  LangSub_en_US.ts  LangSub_zh_CN.qm  LangSub_zh_CN.ts
utils/: __init__.py  config_handler.py  exceptions.py  logger.py  terminology_handler.py
