[tool.poetry]
name = "caption translate"
version = "0.1.0"
description = ""
authors = ["Vinson <vinsonsline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langgraph = "^0.2.33"
langchain-ollama = "^0.2.0"
pysubs2 = "^1.7.3"
langchain-openai = "^0.2.2"
pyyaml = "^6.0.2"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
bs4 = "^0.0.2"
scikit-learn = "^1.5.2"
unstructured = {extras = ["md"], version = "^0.16.0"}
pyside6-fluent-widgets = "^1.7.0"
langchain-anthropic = "^0.3.0"
langchain-google-genai = "^2.0.5"
qasync = "^0.27.1"
pyinstaller = "^6.11.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
